Closed Bug 706057 Opened 13 years ago Closed 13 years ago

IonMonkey: Assertion failure: interval->start() < pos && pos <= interval->end(), at ion/LinearScan.cpp:903

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

ion/testDivision.js asserts with --ion-eager, and I got the same assert last week with a modfied math-cordic.
Attached patch FixSplinter Review
When we split an interval, we scan its uses for any register requirements or hints. The problem here was that we found both a "fixed register" hint and a "fixed register" requirement, and fixedOpIsHint was not set to false.
Attachment #577547 - Flags: review?(dvander)
Attachment #577547 - Flags: review?(dvander) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: