Fix small LSRA bug related to fixed register uses (bug 706057, r=dvander)